Fix navbar overflow issue

--- a/src/components/NavBar/NavBar.scss
+++ b/src/components/NavBar/NavBar.scss
@@ -1,12 +1,12 @@
 $desktop-width: 1200px;
 $tablet-width: 800px;
-$navBar-height: 85px;
+$navBarHeight: 85px;
 $navBar-side-width: 400px;
 $navBar-border-bottom: 1px;
 
 .navBar {
   width: 100%;
-  height: $navBar-height;
+  height: $navBarHeight;
   border-bottom: $navBar-border-bottom solid rgba(0, 0, 0, 0.2);
 
   display: flex;
@@ -39,7 +39,7 @@ $navBar-border-bottom: 1px;
     .dimmer {
       position: absolute;
       z-index: 999;
-      top: $navBar-height;
+      top: $navBarHeight;
       left: 0;
       width: 100%;
       height: 100%;
@@ -70,13 +70,12 @@ $navBar-border-bottom: 1px;
       position: absolute;
       z-index: 999;
       background-color: #ffffff;
-      top: $navBar-height + $navBar-border-bottom;
+      top: $navBarHeight + $navBar-border-bottom;
       // right: $navBar-side-width;
       right: 0;
       max-width: $navBar-side-width;
       width: calc(100% - 60px);
-      width: 100%;
-      height: 100%;
+      height: calc(100% - 85px);
       padding: 30px;
 
       transition: transform 1s ease-in-out;
